<?xml version="1.0"?>
<package format="2">
  <name>cpp_from_python_bicycle</name>
  <version>1.0.1</version>
  <description>The cpp_from_python_bicycle package</description>

  <author email="ayajin1018@gmail.com">ayajin</author>
  <maintainer email="ayajin1018@gmail.com">ayajin</maintainer>

  <license>ACELAB</license>

  <url type="website">http://git.acelab.org:8080/intern-git/ros-study</url>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>ncurses++</build_depend>
  <exec_depend>ncurses++</exec_depend>

</package>
